--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -48,6 +48,8 @@ h1{
 
 .homeImg{
     width: 100%;
+    height: 40rem;
+    object-fit: cover;
     border-radius: 4px;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
 }
@@ -85,11 +87,19 @@ h1{
         align-items: center;
     }  
 
+    .homeImg{
+        height: 100%;
+    }
+    
     .allBeersSelection{
         width: 95%;
     }
     
     .randomBeerSelection{
         width: 95%;
+    }
+
+    .selectionText{
+        margin-bottom: 2rem;
     }
 }
